# joy-kunga.stream

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  jwt-private.pem
.roo/: mcp.json
.roo/rules/: my_workflow.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
libs/common/: Cargo.toml
libs/common/src/: cache.rs  database.rs  error.rs  lib.rs
libs/common/tests/: infrastructure_integration.rs
migrations/: 20250731142901_initial_schema.sql
services/api/: Cargo.toml  jwt-public.pem
services/api/src/: error.rs  main.rs  middleware.rs  models.rs  repositories.rs  routes.rs  state.rs
services/api/src/models/: media.rs
services/api/src/repositories/: media.rs
services/auth/: Cargo.toml
services/auth/migrations/: 20250801093500_create_auth_tables.sql
services/auth/src/: cache.rs  database.rs  jwt.rs  main.rs  middleware.rs  oauth.rs  rate_limiter.rs  routes.rs  session.rs  validation.rs
services/auth/src/models/: mod.rs  role.rs  session.rs  user.rs
services/auth/src/repositories/: mod.rs  user.rs
services/media/: Cargo.toml
services/media/migrations/: 20250801130400_create_processed_objects_table.sql  20250801130800_update_media_items_table.sql  20250801131000_add_search_indices.sql  20250801131500_add_title_index.sql
services/media/src/: database.rs  main.rs  metadata_extractor.rs  models.rs  s3_poller.rs  thumbnail_generator.rs
tickets/: task-1-infrastructure-tickets.md
