[package]
name = "media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
common.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
ffmpeg-next.workspace = true
tokio-cron-scheduler.workspace = true

[dev-dependencies]
serial_test.workspace = true